[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtsf-dbgrab"
version = "0.1.0"
description = "grab SQL data to csv file."
readme = "README.md"
authors = [
    { name = "RockFeng0", email = "281589463@qq.com" },
]
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "jaydebeapi>=1.2.3",
    "oracledb>=3.4.2",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "rtsf>=3.0.2",
    "setuptools>=80.10.1",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
]


[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "setuptools>=80.10.1",
    "wheel>=0.46.3",
]

[project.urls]
Homepage = "https://github.com/RockFeng0/rtsf-dbgrab"
Repository = "https://github.com/RockFeng0/rtsf-dbgrab"

